# mapu

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/mapu/: __init__.py  cluster.py  diversity.py  ordination.py  stats.py  transform.py  vegdist.py
tests/: __init__.py  test_diversity.py  test_ordination.py  test_vegdist.py
