[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mapu"
version = "0.1.0"
description = "A native Python port of the R vegan package for community ecology."
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Pedro Pablo Silva", email = "pedro@example.com" }
]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
keywords = ["ecology", "vegan", "ordination", "diversity", "community ecology"]
dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/pedropablosilvaa/mapu"
Repository = "https://github.com/pedropablosilvaa/mapu.git"
Issues = "https://github.com/pedropablosilvaa/mapu/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
    "build>=0.10.0",
    "twine>=4.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mapu"]
